--- a/todo.txt
+++ b/todo.txt
@@ -3,4 +3,7 @@
 3. Generate private key for the app
 4. Store private key as secret for actions
 5. install app and grant access to desired repo(s)
+    a. Actions - Read-Only
+    b. Contents - Read/Write
+    c. Pull Requests - Read/Write
 6. Generate token in actions
